--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
+  },
+  "engines": {
+    "node": "16.13.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
